# moviegpt

./: .gitignore  Dockerfile  Makefile  README.md  test-requirements.txt  tox.ini
.github/: dependabot.yml
notebooks/: jailbreak.ipynb
src/: pyproject.toml
src/moviegpt/: client.py
src/moviegpt/api/: server.py  web.py
src/moviegpt/data/: chroma.py  client.py  dataset.py  movie.py  utils.py
src/moviegpt/prompts/: recommendation.py
src/moviegpt/providers/: rag.py
src/moviegpt/rag/: embeddings.py
src/tests/: fixtures.py  test_chroma.py  test_get_data.py  test_model.py  test_prompt.py  test_rag.py
storage/: default__vector_store.json  docstore.json  index_store.json
