[tool.poetry]
name = "moviegpt"
version = "0.1.0"
description = ""
authors = ["Rafael <rafael.pierre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.1"
pandas = "^2.1.3"
chromadb = "^0.4.17"
pydantic = "^2.5.1"
duckdb = "^0.9.2"
openai = "^1.3.3"
ipykernel = "^6.26.0"
click = "^8.1.7"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
